--- a/NaimouzaHighSchool/packages.config
+++ b/NaimouzaHighSchool/packages.config
@@ -4,5 +4,6 @@
   <package id="Microsoft.Office.Interop.Excel" version="15.0.4795.1000" targetFramework="net40" />
   <package id="MySql.Data" version="6.9.9" targetFramework="net40" />
   <package id="PDFsharp-MigraDoc-WPF" version="1.32.2608.0" targetFramework="net40" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net40" />
   <package id="WPFToolkit" version="3.5.50211.1" targetFramework="net40" />
 </packages>
